force-app/main/default/objects/Contact/fields/sirenum__Timezone__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Timezone__c</fullName>
    <description>The time zone SID identifying the time zone for this Contact. This should match one of the picklist API names from the standard User object’s TimeZoneSidKey field. If unspecified the org&apos;s time zone is used. If unrecognized, UTC is used instead.</description>
    <inlineHelpText>The time zone SID identifying the time zone for this Contact. This should match one of the picklist API names from the standard User object’s TimeZoneSidKey field. If unspecified the org&apos;s time zone is used. If unrecognized, UTC is used instead.</inlineHelpText>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>