force-app/main/default/objects/Contact/fields/sirenum__TravelMethod__c.field-meta.xml
<CustomField>
    <fullName>sirenum__TravelMethod__c</fullName>
    <description>The most frequently used travel method for this contact.</description>
    <inlineHelpText>The most frequently used travel method for this contact.</inlineHelpText>
    <label>Travel Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Transport</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Walk</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>