force-app/main/default/objects/Contact/fields/sirenum__Wk1Mth1_Basis__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Wk1Mth1_Basis__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enter &quot;0&quot; if the employee is is not on a Wk1/Mth1 Tax Code or &quot;1&quot; if they are on a Wk1/Mth1 Tax Code.</inlineHelpText>
    <label>Week1/Month1 Basis</label>
    <type>Checkbox</type>
</CustomField>