force-app/main/default/objects/Contact/fields/sirenum__Work_End_Date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Work_End_Date__c</fullName>
    <description>Last date when the employee was employed</description>
    <inlineHelpText>Last date when the employee was employed</inlineHelpText>
    <label>Work End Date</label>
    <type>Date</type>
</CustomField>