force-app/main/default/objects/Contact/fields/sirenum__Work_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>sirenum__Work_Start_Date__c</fullName>
    <inlineHelpText>Enter the date that the employee started work</inlineHelpText>
    <label>Work Start Date</label>
    <type>Date</type>
</CustomField>