force-app/main/default/objects/Contact/fields/Student_Loan__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan__c</fullName>
    <label>Student Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Plan 1</fullName>
            </value>
            <value>
                <fullName>Plan 2</fullName>
            </value>
            <value>
                <fullName>Plan 4</fullName>
            </value>
            <value>
                <fullName>Postgraduate Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>