force-app/main/default/objects/Contact/fields/Subject_Specialisms__c.field-meta.xml
<CustomField>
    <fullName>Subject_Specialisms__c</fullName>
    <inlineHelpText>You must add a Subject Specialism if Roles contains: Secondary Teacher, Overseas Secondary Teacher, Head of Subject/Department, HE/FE Lecturer, Head Teacher, Deputy Head Teacher, Assistant Head Teacher, or SENDCO (Special Educational Needs Coordinator).</inlineHelpText>
    <label>Subject Specialism</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subjects</valueSetName>
    </valueSet>
</CustomField>