force-app/main/default/objects/Contact/fields/Teaching_Department__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Department__c</fullName>
    <label>Teaching Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative_and_Support_Services</fullName>
                <label>Administrative and Support Services</label>
            </value>
            <value>
                <fullName>Facilities and Operations</fullName>
            </value>
            <value>
                <fullName>Inclusion Team (any child who isnt CLA and does not have an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>IT and Technical Services</fullName>
            </value>
            <value>
                <fullName>Leadership and Management</fullName>
            </value>
            <value>
                <fullName>Leaving Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Nursery</fullName>
            </value>
            <value>
                <fullName>Pastoral and Student Support</fullName>
            </value>
            <value>
                <fullName>Regional/Trust</fullName>
            </value>
            <value>
                <fullName>Section 19 Team Department within LA</fullName>
            </value>
            <value>
                <fullName>SEND Team (any Child with an EHCP) within LA</fullName>
            </value>
            <value>
                <fullName>Social Care Department within LA</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning</fullName>
            </value>
            <value>
                <fullName>UASC Unaccompanied Asylum Seeking Child</fullName>
            </value>
            <value>
                <fullName>Virtual School within LA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>