force-app/main/default/objects/Contact/fields/Teaching_Role__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Role__c</fullName>
    <label>Teaching Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic Advisor</fullName>
            </value>
            <value>
                <fullName>Admin/ Receptionist</fullName>
            </value>
            <value>
                <fullName>Admin Assistant</fullName>
            </value>
            <value>
                <fullName>Admissions Officer</fullName>
            </value>
            <value>
                <fullName>Advisory Teacher (CES)</fullName>
            </value>
            <value>
                <fullName>Alternative Provision Coordinator</fullName>
            </value>
            <value>
                <fullName>AP Case Worker (Alternative Provision)</fullName>
            </value>
            <value>
                <fullName>Assistant Headteacher</fullName>
            </value>
            <value>
                <fullName>Assistant SENCO</fullName>
            </value>
            <value>
                <fullName>Attendance Officer</fullName>
            </value>
            <value>
                <fullName>Behaviour/ Pastoral Lead</fullName>
            </value>
            <value>
                <fullName>Behaviour/ Pastoral Support</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>CAMHS Worker</fullName>
            </value>
            <value>
                <fullName>Caretaker/ Site Manager</fullName>
            </value>
            <value>
                <fullName>Caretaker / Site Officer</fullName>
            </value>
            <value>
                <fullName>Catering Assistant</fullName>
            </value>
            <value>
                <fullName>CEO/Owner</fullName>
            </value>
            <value>
                <fullName>Child Protection Officer</fullName>
            </value>
            <value>
                <fullName>CLA Lead (Children Looked After)</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Cover Manager</fullName>
            </value>
            <value>
                <fullName>Cover Supervisor</fullName>
            </value>
            <value>
                <fullName>Data Manager</fullName>
            </value>
            <value>
                <fullName>Data Officer</fullName>
            </value>
            <value>
                <fullName>Deputy Headteacher</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Driver/Transport</fullName>
            </value>
            <value>
                <fullName>DSL (Designated Safeguarding Lead)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>