force-app/main/default/objects/Contact/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Candidates / Client Contacts</relationshipLabel>
    <relationshipName>Candidates_Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>