force-app/main/default/objects/Contact/fields/Term_Break__c.field-meta.xml
<CustomField>
    <fullName>Term_Break__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Break</label>
    <referenceTo>Term_Break__c</referenceTo>
    <relationshipLabel>Candidates / Client Contacts</relationshipLabel>
    <relationshipName>Candidates_Client_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>