force-app/main/default/objects/Contact/fields/Textkernel_Access_Roles__c.field-meta.xml
<CustomField>
    <fullName>Textkernel_Access_Roles__c</fullName>
    <label>Textkernel Access Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Banquo</fullName>
            </value>
            <value>
                <fullName>HSCLondonandSouthEast</fullName>
                <label>HSC - London and South East</label>
            </value>
            <value>
                <fullName>HSCMidlands</fullName>
                <label>HSC - Midlands</label>
            </value>
            <value>
                <fullName>HSCNorthEast</fullName>
                <label>HSC - North East</label>
            </value>
            <value>
                <fullName>HSCNorthWest</fullName>
                <label>HSC - North West</label>
            </value>
            <value>
                <fullName>HSCSouthCoast</fullName>
                <label>HSC - South Coast</label>
            </value>
            <value>
                <fullName>HSCWalesandSouthWest</fullName>
                <label>HSC - Wales and South West</label>
            </value>
            <value>
                <fullName>HSCYorkshire</fullName>
                <label>HSC - Yorkshire</label>
            </value>
            <value>
                <fullName>ProsperoGroup</fullName>
                <label>Prospero Group</label>
            </value>
            <value>
                <fullName>ProsperoHealthSocialCare</fullName>
                <label>Prospero Health &amp; Social Care</label>
            </value>
            <value>
                <fullName>ProsperoIntegrated</fullName>
                <label>Prospero Integrated</label>
            </value>
            <value>
                <fullName>ProsperoTeaching</fullName>
                <label>Prospero Teaching</label>
            </value>
            <value>
                <fullName>TEACanada</fullName>
                <label>TEA - Canada</label>
            </value>
            <value>
                <fullName>TEALondonandSouthEast</fullName>
                <label>TEA - London and South East</label>
            </value>
            <value>
                <fullName>TEAMidlands</fullName>
                <label>TEA - Midlands</label>
            </value>
            <value>
                <fullName>TEANorthEast</fullName>
                <label>TEA - North East</label>
            </value>
            <value>
                <fullName>TEANorthWest</fullName>
                <label>TEA - North West</label>
            </value>
            <value>
                <fullName>TEASouthCoast</fullName>
                <label>TEA - South Coast</label>
            </value>
            <value>
                <fullName>TEAWalesandSouthWest</fullName>
                <label>TEA - Wales and South West</label>
            </value>
            <value>
                <fullName>TEAYorkshire</fullName>
                <label>TEA - Yorkshire</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>