force-app/main/default/objects/Contact/fields/Timesheet_Approver__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prospero&apos;s timesheet approver field so it can be defaulted to False</description>
    <label>Timesheet Approver</label>
    <type>Checkbox</type>
</CustomField>