force-app/main/default/objects/Contact/fields/TR1__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>TR1__Account_Name__c</fullName>
    <description>Formula to pull the name of the account so it can be added to a fieldset</description>
    <formula>Account.Name</formula>
    <inlineHelpText>Name of the Contact&apos;s Account</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>