force-app/main/default/objects/Contact/fields/TR1__Additional_Background__c.field-meta.xml
<CustomField>
    <fullName>TR1__Additional_Background__c</fullName>
    <label>Additional Background</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TR1__Function__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Biostatistics - Clinical</fullName>
            </value>
            <value>
                <fullName>BiotechOps - Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical DBA - Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Operations - Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Outsourcing - Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Project Management - Clinical</fullName>
            </value>
            <value>
                <fullName>Clinical Scientist - Clinical</fullName>
            </value>
            <value>
                <fullName>Contract Monitor - Clinical</fullName>
            </value>
            <value>
                <fullName>Coordinator - Clinical</fullName>
            </value>
            <value>
                <fullName>CTA - Clinical</fullName>
            </value>
            <value>
                <fullName>Data Management - Clinical</fullName>
            </value>
            <value>
                <fullName>Drug Safety - Clinical</fullName>
            </value>
            <value>
                <fullName>Independent Contract Monitoring - Clinical</fullName>
            </value>
            <value>
                <fullName>Independent Project Management - Clinical</fullName>
            </value>
            <value>
                <fullName>In-house CRA - Clinical</fullName>
            </value>
            <value>
                <fullName>Medical Doctor Safety - Clinical</fullName>
            </value>
            <value>
                <fullName>Medical Doctor Clinical - Clinical</fullName>
            </value>
            <value>
                <fullName>Regional CRA - Clinical</fullName>
            </value>
            <value>
                <fullName>Regional Operations - Clinical</fullName>
            </value>
            <value>
                <fullName>Auditor - Engineering</fullName>
            </value>
            <value>
                <fullName>Business Analyst - Engineering</fullName>
            </value>
            <value>
                <fullName>Compliance Specialist - Engineering</fullName>
            </value>
            <value>
                <fullName>Computer System Validation - Engineering</fullName>
            </value>
            <value>
                <fullName>Manufacturing - Engineering</fullName>
            </value>
            <value>
                <fullName>Process - Engineering</fullName>
            </value>
            <value>
                <fullName>Product Quality - Engineering</fullName>
            </value>
            <value>
                <fullName>Project Management - Engineering</fullName>
            </value>
            <value>
                <fullName>Quality Assurance - Engineering</fullName>
            </value>
            <value>
                <fullName>Regulatory Affairs - Engineering</fullName>
            </value>
            <value>
                <fullName>Software Quality - Engineering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>