force-app/main/default/objects/Contact/fields/TR1__ADP_File_Number__c.field-meta.xml
<CustomField>
    <fullName>TR1__ADP_File_Number__c</fullName>
    <label>ADP File Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>