force-app/main/default/objects/Contact/fields/TR1__Agreed_D2D_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>TR1__Agreed_D2D_Pay_Rate__c</fullName>
    <label>Agreed D2D Pay Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>