force-app/main/default/objects/Contact/fields/TR1__ApplicationIds__c.field-meta.xml
<CustomField>
    <fullName>TR1__ApplicationIds__c</fullName>
    <label>ApplicationIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>