force-app/main/default/objects/Contact/fields/TR1__AttachmentSize__c.field-meta.xml
<CustomField>
    <fullName>TR1__AttachmentSize__c</fullName>
    <label>Number of Attachments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>