force-app/main/default/objects/Contact/fields/TR1__Availability_Resume_Formatter__c.field-meta.xml
<CustomField>
    <fullName>TR1__Availability_Resume_Formatter__c</fullName>
    <label>Availability (Resume Formatter)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>