force-app/main/default/objects/Contact/fields/TR1__Batch_ID__c.field-meta.xml
<CustomField>
    <fullName>TR1__Batch_ID__c</fullName>
    <label>Batch ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>