force-app/main/default/objects/Contact/fields/TR1__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>TR1__Birthdate__c</fullName>
    <label>Birthdate</label>
    <type>Date</type>
</CustomField>