force-app/main/default/objects/Contact/fields/TR1__Blank_Space__c.field-meta.xml
<CustomField>
    <fullName>TR1__Blank_Space__c</fullName>
    <formula>NULL</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Space</label>
    <type>Text</type>
</CustomField>