force-app/main/default/objects/Contact/fields/TR1__Call_List_Count__c.field-meta.xml
<CustomField>
    <fullName>TR1__Call_List_Count__c</fullName>
    <label>Call List Count</label>
    <summaryForeignKey>TR1__Call_List_Member__c.TR1__Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>