force-app/main/default/objects/Contact/fields/TR1__Call_List_IDs__c.field-meta.xml
<CustomField>
    <fullName>TR1__Call_List_IDs__c</fullName>
    <label>Call List IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>