force-app/main/default/objects/Contact/fields/TR1__CallListCount__c.field-meta.xml
<CustomField>
    <fullName>TR1__CallListCount__c</fullName>
    <description>Number of Call lists the contact is added to(from Candidate Statistics record)</description>
    <formula>TR1__Candidate_Statistics__r.TR1__CallListCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Call lists the contact is added to(from Candidate Statistics record)</inlineHelpText>
    <label>Call List Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>