force-app/main/default/objects/Contact/fields/TR1__Candidate_Highlights__c.field-meta.xml
<CustomField>
    <fullName>TR1__Candidate_Highlights__c</fullName>
    <label>Candidate Highlights</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>