force-app/main/default/objects/Contact/fields/TR1__Candidate_Statistics__c.field-meta.xml
<CustomField>
    <fullName>TR1__Candidate_Statistics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidate Statistics record containing candidate information. If the Candidate Statistics feature is enabled, the information is updated automatically.</description>
    <inlineHelpText>Candidate Statistics record containing candidate information. If the Candidate Statistics feature is enabled, the information is updated automatically.</inlineHelpText>
    <label>Candidate Statistics</label>
    <referenceTo>TR1__Candidate_Summary__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Candidate_Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>