force-app/main/default/objects/Contact/fields/TR1__Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HubSpot Candidate</fullName>
            </value>
            <value>
                <fullName>Passive</fullName>
                <default>true</default>
                <label>Passive</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Placed</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>