force-app/main/default/objects/Contact/fields/TR1__Candidate_Summary__c.field-meta.xml
<CustomField>
    <fullName>TR1__Candidate_Summary__c</fullName>
    <label>Candidate Summary</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>