force-app/main/default/objects/Contact/fields/TR1__Certfications_and_Affiliations__c.field-meta.xml
<CustomField>
    <fullName>TR1__Certfications_and_Affiliations__c</fullName>
    <label>Certfications and Affiliations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>