force-app/main/default/objects/Contact/fields/TR1__Certification_Highlights__c.field-meta.xml
<CustomField>
    <fullName>TR1__Certification_Highlights__c</fullName>
    <label>Certification Highlights</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>