force-app/main/default/objects/Contact/fields/TR1__Certifications__c.field-meta.xml
<CustomField>
    <fullName>TR1__Certifications__c</fullName>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agile</fullName>
            </value>
            <value>
                <fullName>ASCP</fullName>
            </value>
            <value>
                <fullName>CBP</fullName>
            </value>
            <value>
                <fullName>CCIE</fullName>
            </value>
            <value>
                <fullName>CCNA</fullName>
            </value>
            <value>
                <fullName>CCNP</fullName>
            </value>
            <value>
                <fullName>CCP</fullName>
            </value>
            <value>
                <fullName>CIA</fullName>
            </value>
            <value>
                <fullName>CISA</fullName>
            </value>
            <value>
                <fullName>CISM</fullName>
            </value>
            <value>
                <fullName>CISSP</fullName>
            </value>
            <value>
                <fullName>CLS</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>CQE</fullName>
            </value>
            <value>
                <fullName>GPHR</fullName>
            </value>
            <value>
                <fullName>HT</fullName>
            </value>
            <value>
                <fullName>ITIL</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA - Architects</fullName>
            </value>
            <value>
                <fullName>MCITP</fullName>
            </value>
            <value>
                <fullName>MCSE</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>OCA</fullName>
            </value>
            <value>
                <fullName>OCP</fullName>
            </value>
            <value>
                <fullName>PHR</fullName>
            </value>
            <value>
                <fullName>PMI-ACP</fullName>
            </value>
            <value>
                <fullName>PMP</fullName>
            </value>
            <value>
                <fullName>RAC</fullName>
            </value>
            <value>
                <fullName>RHCE - Red Hat</fullName>
            </value>
            <value>
                <fullName>Scrum Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>