force-app/main/default/objects/Contact/fields/TR1__Citizenship__c.field-meta.xml
<CustomField>
    <fullName>TR1__Citizenship__c</fullName>
    <label>Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AD</fullName>
                <label>Andorran</label>
            </value>
            <value>
                <fullName>AE</fullName>
                <label>Emirati</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Afghan</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Antigua</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albanian</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenian</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angolian</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentinian</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austrian</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australian</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaijani</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bosnian</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbadian</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bangladeshi</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgian</label>
            </value>
            <value>
                <fullName>BF</fullName>
                <label>Burkinabe</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bahraini</label>
            </value>
            <value>
                <fullName>BI</fullName>
                <label>Burundian</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Beninese</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>Bruneian</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Bolivian</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brazilian</label>
            </value>
            <value>
                <fullName>BS</fullName>
                <label>Bahamian</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>Bhutanese</label>
            </value>
            <value>
                <fullName>BW</fullName>
                <label>Motswana</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Belarusian</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Belizean</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canadian</label>
            </value>
            <value>
                <fullName>CD</fullName>
                <label>Congolese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>