force-app/main/default/objects/Contact/fields/TR1__Client_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Client_Status__c</fullName>
    <label>Client Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Past</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>