force-app/main/default/objects/Contact/fields/TR1__CO_Code__c.field-meta.xml
<CustomField>
    <fullName>TR1__CO_Code__c</fullName>
    <label>CO_Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>