force-app/main/default/objects/Contact/fields/TR1__Compliance_Owner__c.field-meta.xml
<CustomField>
    <fullName>TR1__Compliance_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compliance Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>