force-app/main/default/objects/Contact/fields/TR1__Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>Vet Complete</fullName>
            </value>
            <value>
                <fullName>Vet Perm</fullName>
            </value>
            <value>
                <fullName>Vet FLTP</fullName>
            </value>
            <value>
                <fullName>Interview Complete</fullName>
            </value>
            <value>
                <fullName>Perm</fullName>
            </value>
            <value>
                <fullName>Cleared Pending</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Not Cleared</fullName>
            </value>
            <value>
                <fullName>Not Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>