force-app/main/default/objects/Contact/fields/TR1__Consent_Type_Response_Status__c.field-meta.xml
<CustomField>
    <fullName>TR1__Consent_Type_Response_Status__c</fullName>
    <label>Consent Type - Response Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent Type1</fullName>
            </value>
            <value>
                <fullName>ConsentType1 - I Consent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>